# ctr-rosales-qc

./: .env.example  .gitignore  2026-05-31-191201-local-command-caveatcaveat-the-messages-below.txt  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.app.yml  docker-compose.verify-fast.yml  docker-compose.yml  install.bat  install.ps1  install.sh
backend/: .dockerignore  .env.example  =2.7  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
backend/docker/: ocr_assert.py  ocr_warmup.py
backend/scripts/: make_verify_subset.py
backend/src/reconciliation/application/: __init__.py  config.py  pipeline.py  reprocess_service.py  review_service.py  run_context.py  run_history.py  vision_key_store.py
backend/src/reconciliation/domain/: classifier.py  date_ceiling.py  date_divergence.py  date_floor.py  date_inference.py  errors.py  material_key.py  material_key_normalizer.py  material_key_resolver.py  models.py  normalizer.py  ports.py  reconciliation.py  section_id_guard.py  units.py
backend/src/reconciliation/infrastructure/: container.py  run_history_store.py  vision_key_file_store.py
backend/tests/: conftest.py
backend/tests/e2e/: test_container_verification.py  test_smoke_cloud_vision.py
backend/tests/integration/: test_discarded_pages_gate.py  test_discarded_recovery_gate.py  test_e2e.py  test_pdf_adapters.py  test_pipeline_e2e.py  test_pipeline_e2e_rev2.py  test_pipeline_multi_section.py  test_pipeline_r8_gate.py  test_pipeline_r9_gate.py  test_pipeline_rev3_gate.py  test_rapidocr_gate.py  test_run_history_legacy_gate.py  test_run_history_restart_gate.py
backend/tests/unit/adapters/: test_box_row_parser.py  test_digital_text_extractor.py  test_null_extractor.py  test_null_vision.py  test_ocr_factory.py  test_ollama_material.py  test_paddle_deskew.py  test_paddle_table.py  test_qr_barcode.py  test_rapid_table.py  test_sunat_descargaqr.py  test_sunat_fetch_many.py  test_vision_adapters.py  test_vision_meter.py  test_vision_table.py  test_xlsx_report.py
backend/tests/unit/application/: test_apply_page_recovery.py  test_block_grouping.py  test_config.py  test_config_reprocess.py  test_errored_guias.py  test_hybrid_classifier.py  test_pipeline.py  test_pipeline_discarded_pages.py  test_positional_gate.py  test_progress.py  test_recover_discarded_page_hook.py  test_reprocess_batch_concurrency.py  test_reprocess_service.py  test_reprocess_service_vision.py  test_retry_batch_fix42.py  test_review_service.py  test_review_service_crossed_bounds.py  test_review_service_mark_retry_attempted.py  test_review_service_operator_assign.py  test_review_service_recovered_guia_replace.py  test_review_service_recovered_guia_sidecar.py  test_run_context.py  test_run_history_port.py  test_sidecar_restart_roundtrip.py  test_stage_delivery_floor.py  test_stage_extract_declared_date.py  test_stage_extract_vision_hint.py  test_stage_normalize_dates_fecha_entrega.py  test_stage_normalize_dates_guia.py  test_stage_reconcile_delivery_dates.py  test_stage_vision_off.py  test_sunat_preserve_requires_review.py  test_sunat_progress.py  test_vision_key_store.py
backend/tests/unit/domain/: test_classifier.py  test_date_ceiling.py  test_date_divergence.py  test_date_floor.py  test_date_inference.py  test_delivery_after_protocolo.py  test_delivery_floor_reconciliation.py  test_errored_guia_retry_attempted.py  test_grade_tolerant_reconciliation.py  test_material_key.py  test_material_key_normalizer.py  test_material_key_resolver.py  test_models.py  test_normalizer.py  test_ports.py  test_ports_contract_read_material_table.py  test_reception_ceiling_reconciliation.py  test_reconciliation.py  test_registro_map.py  test_section_id_guard.py
backend/tests/unit/infrastructure/: test_48h_sweep.py  test_api_routes.py  test_background_wrapper_manifest.py  test_build_reprocess_service.py  test_capabilities_schemas.py  test_container.py  test_container_discarded.py  test_delete_run.py  test_full_page_image.py  test_lazy_hydration.py  test_lifespan_scan.py  test_recovery_endpoints.py  test_reprocess_batch_status.py  test_reprocess_endpoint.py  test_retry_run.py  test_row_to_response_delivery_after_protocolo.py  test_row_to_response_delivery_floor.py  test_row_to_response_reception_ceiling.py  test_run_history_adapter.py  test_schemas_discarded.py  (+3 more)
(+251 files in other folders)
