[project]
name = "reconciliation"
version = "0.1.0"
description = "CTR Rosales QC — material reconciliation pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pymupdf>=1.24",
    "openpyxl>=3.1",
    "polars>=0.20",
    "python-multipart",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "paddlepaddle",
    "paddleocr",
    "Pillow>=10.0",
]
llm = [
    "anthropic>=0.26",
    "openai>=1.30",
]
identity = [
    "pyzbar>=0.1.9",
    "zxing-cpp>=2.2.0",
    "Pillow>=10.0",
    "numpy>=1.26",
]
all = [
    "reconciliation[ml,llm,identity]",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "types-openpyxl",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reconciliation"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
